--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -13,12 +13,12 @@
 - name: クイックスタート
   expanded: true
   items:
-    - name: Functions の作成
+    - name: 関数の作成
       expanded: true
       items:
         - name: Visual Studio Code
           href: ./functions-create-first-function-vs-code.md
-        - name: "Visual\_Studio"
+        - name: Visual Studio
           href: functions-create-your-first-function-visual-studio.md
         - name: コマンド ライン
           href: functions-create-first-azure-function-azure-cli.md
@@ -29,7 +29,7 @@
       items:
         - name: Visual Studio Code
           href: functions-add-output-binding-storage-queue-vs-code.md
-        - name: "Visual\_Studio"
+        - name: Visual Studio
           href: functions-add-output-binding-storage-queue-vs.md
         - name: コマンド ライン
           href: functions-add-output-binding-storage-queue-cli.md
@@ -37,7 +37,7 @@
   items:
     - name: Functions と Logic Apps
       href: functions-twitter-email.md
-    - name: VS Code での Python で Functions の開発
+    - name: VS Code での Python 関数の開発
       href: /azure/python/tutorial-vs-code-serverless-python-01
     - name: サーバーレス API のための OpenAPI 定義
       href: functions-openapi-definition.md
@@ -129,6 +129,10 @@
           href: functions-reference-python.md
         - name: TypeScript
           href: functions-reference-node.md#typescript
+    - name: フレームワーク
+      items:
+        - name: Express.js
+          href: shift-expressjs.md
     - name: セキュリティ
       items:
         - name: セキュリティの概要
@@ -146,7 +150,7 @@
     - name: ストレージに関する考慮事項
       href: storage-considerations.md
       displayName: 'encryption, keys, mount, files'
-    - name: Functions プロキシ
+    - name: 関数プロキシ
       href: functions-proxies.md
     - name: ネットワーク オプション
       href: functions-networking-options.md
@@ -170,7 +174,7 @@
               href: functions-develop-vs.md
             - name: コア ツールの開発
               href: functions-run-local.md
-        - name: Functions の作成
+        - name: 関数の作成
           items:
             - name: HTTP トリガー
               items:
@@ -224,7 +228,7 @@
           items:
             - name: テスト Functions
               href: functions-test-a-function.md
-            - name: ローカルの PowerShell で Functions をデバッグする
+            - name: ローカルの PowerShell 関数をデバッグする
               href: functions-debug-powershell-local.md
             - name: イベント グリッド トリガーをローカルにデバッグ
               href: functions-debug-event-grid-trigger-local.md
@@ -235,7 +239,7 @@
           displayName: best practice
         - name: エラー処理
           href: functions-bindings-error-pages.md
-        - name: HTTP によってトリガーされない Functions を手動で実行する
+        - name: HTTP によってトリガーされない関数を手動で実行する
           href: functions-manually-run-non-http.md
     - name: 配置
       items:
@@ -256,21 +260,21 @@
           displayName: 'keda, container, docker'
         - name: リソースのデプロイの自動化
           href: functions-infrastructure-as-code.md
-        - name: オンプレミスの Functions
+        - name: オンプレミスの関数
           href: functions-runtime-install.md
         - name: Jenkins プラグインを使用したデプロイ
           href: /azure/jenkins/jenkins-azure-functions-deploy
           maintainContext: true
     - name: 構成
       items:
-        - name: Functions アプリの管理
+        - name: 関数アプリの管理
           href: functions-how-to-use-azure-function-app-settings.md
           displayName: 'app setting, application setting'
         - name: ランタイム バージョンの設定
           href: set-runtime-version.md
         - name: 手動による拡張機能の登録
           href: install-update-binding-extensions-manual.md
-        - name: Functions の無効化
+        - name: 関数の無効化
           href: disable-function.md
         - name: geo ディザスター リカバリー
           href: functions-geo-disaster-recovery.md
@@ -333,7 +337,7 @@
           href: app-service-export-api-to-powerapps-and-flow.md
         - name: マネージド ID の使用
           href: ../app-service/overview-managed-identity.md?toc=%2fazure%2fazure-functions%2ftoc.json
-        - name: HTTP Functions エンドポイントのカスタマイズ
+        - name: HTTP 関数エンドポイントのカスタマイズ
           href: functions-create-serverless-api.md
         - name: オンプレミスのリソースの管理
           href: functions-hybrid-powershell.md
@@ -372,7 +376,7 @@
             - name: 入力
               displayName: Blob storage
               href: functions-bindings-storage-blob-input.md
-            - name: 出力
+            - name: Output
               displayName: Blob storage
               href: functions-bindings-storage-blob-output.md
         - name: Azure Cosmos DB
@@ -392,7 +396,7 @@
                 - name: 入力
                   href: functions-bindings-cosmosdb-v2-input.md
                   displayName: Azure Cosmos DB
-                - name: 出力
+                - name: Output
                   href: functions-bindings-cosmosdb-v2-output.md
                   displayName: Azure Cosmos DB
         - name: Event Grid
