--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -46,18 +46,24 @@
       href: manage-dhcp.md
     - name: 障害復旧
       href: disaster-recovery.md
-    - name: AVS 向けの Azure Backup Server
-      items:
-        - name: AVS 向けに Azure Backup Server を設定する
-          href: set-up-mabs-for-avs.md
-        - name: Azure Backup Server を使用して AVS VM をバックアップする
-          href: backup-avs-vms-with-mabs.md
     - name: Azure のネイティブ統合
       items:
         - name: API Management
           href: concepts-api-management.md
         - name: ハブ アンド スポーク
           href: concepts-avs-hub-and-spoke-integration.md
+        - name: AVS 向けの Azure Backup Server
+          items:
+            - name: AVS 向けの Backup Server の設定
+              href: set-up-mabs-for-avs.md
+            - name: Backup Server を使用した AVS VM のバックアップ
+              href: backup-avs-vms-with-mabs.md
+        - name: AVS 上の Application Gateway
+          href: protect-avs-web-apps-with-app-gateway.md
+    - name: VMware ソリューション
+      items:
+        - name: AVS 向けの vRealize Operations の設定
+          href: vrealize-operations-for-avs.md
 - name: リファレンス
   items: null
 - name: リソース
