--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -90,13 +90,13 @@
       href: 'https://aka.ms/azure-powershell-cognitiveservices'
     - name: Text Analytics API
       items:
-        - name: v3.0 プレビュー
-          href: 'https://westus.dev.cognitive.microsoft.com/docs/services/TextAnalytics-v3-0-Preview-1'
+        - name: v3.0
+          href: 'https://westus.dev.cognitive.microsoft.com/docs/services/TextAnalytics-v3-0'
         - name: v2
           href: 'https://westcentralus.dev.cognitive.microsoft.com/docs/services/TextAnalytics-v2-1'
     - name: SDK
       items:
-        - name: v3.0 プレビュー
+        - name: v3.0
           items:
             - name: .NET
               href: 'https://aka.ms/azsdk-net-textanalytics-ref-docs'
