--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -78,7 +78,7 @@
     - name: Python のサンプル
       href: sql-api-python-samples.md
     - name: PowerShell
-      href: powershell-samples-sql.md
+      href: powershell-samples.md
     - name: Azure CLI
       href: cli-samples.md
     - name: Azure Resource Manager
@@ -458,12 +458,6 @@
         - name: パラメーター化クエリ
           displayName: 'parameterized query, parameterized, parameter, parameters'
           href: sql-query-parameterized-queries.md
-        - name: SQL クエリの実行
-          displayName: 'query performance, query execution'
-          href: sql-query-execution.md
-        - name: 改ページ位置の自動修正
-          displayName: 'page, paging, continuation, token, pagination'
-          href: sql-query-pagination.md
         - name: LINQ to SQL
           displayName: 'linq, .NET'
           href: sql-query-linq-to-sql.md
@@ -592,6 +586,8 @@
           href: policy.md
     - name: サービス クォータ
       href: concepts-limits.md
+    - name: 自動の推奨事項
+      href: automated-recommendations.md
 - name: Cassandra、MongoDB、およびその他の API
   expanded: true
   items:
@@ -672,7 +668,7 @@
               href: manage-cassandra-with-resource-manager.md
               displayName: ARM
             - name: PowerShell を使用して管理する
-              href: powershell-samples-cassandra.md
+              href: powershell-samples.md
             - name: Azure CLI を使用して管理する
               href: cli-samples.md
     - name: MongoDB API
@@ -766,7 +762,7 @@
               href: manage-mongodb-with-resource-manager.md
               displayName: ARM
             - name: PowerShell を使用して管理する
-              href: powershell-samples-mongodb.md
+              href: powershell-samples.md
             - name: Azure CLI を使用して管理する
               href: cli-samples.md
             - name: 一般的な問題のトラブルシューティング
@@ -826,7 +822,7 @@
               href: manage-gremlin-with-resource-manager.md
               displayName: ARM
             - name: PowerShell を使用して管理する
-              href: powershell-samples-gremlin.md
+              href: powershell-samples.md
             - name: Azure CLI を使用して管理する
               href: cli-samples.md
         - name: リファレンス
@@ -897,7 +893,7 @@
               href: manage-table-with-resource-manager.md
               displayName: ARM
             - name: PowerShell を使用して管理する
-              href: powershell-samples-table.md
+              href: powershell-samples.md
             - name: Azure CLI を使用して管理する
               href: cli-samples.md
         - name: リファレンス
