--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -40,12 +40,14 @@
       items:
         - name: Azure Digital Twins CLI を使用する
           href: how-to-use-cli.md
-        - name: インスタンスと認証を設定する (スクリプト化)
-          href: how-to-set-up-instance-scripted.md
-        - name: インスタンスと認証を設定する (CLI)
-          href: how-to-set-up-instance-cli.md
-        - name: インスタンスと認証を設定する (ポータル)
-          href: how-to-set-up-instance-portal.md
+        - name: インスタンスと認証を設定する
+          items:
+            - name: スクリプト化バージョン
+              href: how-to-set-up-instance-scripted.md
+            - name: CLI のバージョン
+              href: how-to-set-up-instance-cli.md
+            - name: ポータルのバージョン
+              href: how-to-set-up-instance-portal.md
         - name: アプリ認証コードを作成する
           href: how-to-authenticate-client.md
     - name: モデルを設計する
