--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -10,14 +10,16 @@
       href: load-balancer-faqs.md
 - name: クイック スタート
   items:
-    - name: ロード バランサーの作成 - ポータル
+    - name: パブリック ロード バランサ―の作成 - ポータル
       href: quickstart-load-balancer-standard-public-portal.md
-    - name: ロード バランサーの作成 - Azure CLI
+    - name: パブリック ロード バランサ―の作成 - Azure CLI
       href: quickstart-load-balancer-standard-public-cli.md
-    - name: ロード バランサーの作成 - Azure PowerShell
+    - name: パブリック ロード バランサ―の作成 - Azure PowerShell
       href: quickstart-create-standard-load-balancer-powershell.md
-    - name: ロード バランサーの作成 - ARM テンプレート
+    - name: パブリック ロード バランサ―の作成 - Resource Manager テンプレート
       href: quickstart-load-balancer-standard-public-template.md
+    - name: 内部ロード バランサ―の作成 - Azure PowerShell
+      href: quickstart-load-balancer-standard-internal-portal.md
   expanded: true
 - name: チュートリアル
   items:
