--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: j-martens
   ms.author: jmartens
   ms.date: 07/30/2020
-  ms.openlocfilehash: 066f82bf214a9a5a2a364bc9dc021a1baa31feac
-  ms.sourcegitcommit: 0b8320ae0d3455344ec8855b5c2d0ab3faa974a3
+  ms.openlocfilehash: 40a8fc105dd297ec4bc70ecc0a27b9fa295d3fe1
+  ms.sourcegitcommit: 5f7b75e32222fe20ac68a053d141a0adbd16b347
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/30/2020
-  ms.locfileid: "87433072"
+  ms.lasthandoff: 07/31/2020
+  ms.locfileid: "87474514"
 landingContent:
 - title: 機械学習の概要
   linkLists:
@@ -25,12 +25,18 @@ landingContent:
     links:
     - text: Python ノートブック
       url: tutorial-1st-experiment-sdk-setup.md
-    - text: デザイナー (ドラッグ アンド ドロップ)
-      url: tutorial-designer-automobile-price-train-score.md
     - text: AutoML (コードなし/少量のコード)
       url: tutorial-first-experiment-automated-ml.md
+    - text: デザイナー (ドラッグ アンド ドロップ)
+      url: tutorial-designer-automobile-price-train-score.md
     - text: RStudio
       url: tutorial-1st-r-experiment.md
+- title: Azure への ML モデルの持ち込み
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: ローカル モデルをクラウドにデプロイする
+      url: how-to-deploy-existing-model.md
 - title: スタジオでの AutoML またはドラッグ アンド ドロップの使用
   linkLists:
   - linkListType: overview
@@ -45,50 +51,10 @@ landingContent:
     links:
     - text: 'AutoML: 分類モデルをビルドする'
       url: tutorial-first-experiment-automated-ml.md
-    - text: 'AutoML: ML モデルのトレーニングとデプロイ'
-      url: how-to-use-automated-ml-for-ml-models.md
     - text: 'デザイナー: 自動価格の予測'
       url: tutorial-designer-automobile-price-train-score.md
-    - text: イメージのラベル付けプロジェクトを作成する
+    - text: 分類を行うために画像にラベルを付ける
       url: tutorial-labeling.md
-- title: Azure へのモデルの持ち込み
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: ローカル モデルをクラウドにデプロイする
-      url: how-to-deploy-existing-model.md
-- title: Python SDK でトレーニングする
-  linkLists:
-  - linkListType: tutorial
-    links:
-    - text: 初めての ML 実験を作成する
-      url: tutorial-1st-experiment-sdk-setup.md
-    - text: 画像を分類する
-      url: tutorial-train-models-with-aml.md
-    - text: AutoML を使用してタクシー料金を予測する
-      url: tutorial-auto-train-models.md
-    - text: Azure ML パイプラインを作成する
-      url: tutorial-pipeline-batch-scoring-classification.md
-  - linkListType: how-to-guide
-    links:
-    - text: 環境の設定方法
-      url: how-to-configure-environment.md
-    - text: モデルの解釈と説明
-      url: how-to-machine-learning-interpretability.md
-    - text: ディープ ラーニングと ML
-      url: concept-deep-learning-vs-machine-learning.md
-    - text: Scikit-learn モデルをトレーニングして登録する
-      url: how-to-train-scikit-learn.md
-    - text: TensorFlow モデルをトレーニングして登録する
-      url: how-to-train-tensorflow.md
-    - text: PyTorch モデルをトレーニングして登録する
-      url: how-to-train-pytorch.md
-    - text: Keras モデルをトレーニングして登録する
-      url: how-to-train-keras.md
-    - text: 強化学習
-      url: how-to-use-reinforcement-learning.md
-    - text: ML パイプラインとは
-      url: concept-ml-pipelines.md
 - title: MLOps:モデルの展開と管理
   linkLists:
   - linkListType: how-to-guide
@@ -101,6 +67,34 @@ landingContent:
       url: how-to-consume-web-service.md
     - text: バッチ予測
       url: how-to-use-parallel-run-step.md
+    - text: MLOps の例のリポジトリ
+      url: https://github.com/microsoft/MLOps
+- title: Python SDK でトレーニングする
+  linkLists:
+  - linkListType: tutorial
+    links:
+    - text: 初めての ML 実験を作成する
+      url: tutorial-1st-experiment-sdk-setup.md
+    - text: AutoML を使用してタクシー料金を予測する
+      url: tutorial-auto-train-models.md
+    - text: Azure ML パイプラインを作成する
+      url: tutorial-pipeline-batch-scoring-classification.md
+    - text: 画像を分類する
+      url: tutorial-train-models-with-aml.md
+  - linkListType: how-to-guide
+    links:
+    - text: 環境の設定方法
+      url: how-to-configure-environment.md
+    - text: Scikit-learn モデルをトレーニングする
+      url: how-to-train-scikit-learn.md
+    - text: TensorFlow モデルをトレーニングする
+      url: how-to-train-tensorflow.md
+    - text: PyTorch モデルをトレーニングする
+      url: how-to-train-pytorch.md
+    - text: Keras モデルをトレーニングする
+      url: how-to-train-keras.md
+    - text: ML パイプラインとは
+      url: concept-ml-pipelines.md
 - title: リファレンス ドキュメントに移動する
   linkLists:
   - linkListType: reference
@@ -109,8 +103,6 @@ landingContent:
       url: https://docs.microsoft.com/python/api/overview/azure/ml/?view=azure-ml-py
     - text: デザイナーのアルゴリズムとモジュール
       url: algorithm-module-reference/module-reference.md
-    - text: MLOps の例のリポジトリ
-      url: https://github.com/microsoft/MLOps
     - text: REST API
       url: https://docs.microsoft.com/rest/api/azureml/
     - text: Machine Learning CLI
