--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -38,6 +38,8 @@
       href: /azure/jenkins/tutorial-jenkins-deploy-cli-spring-cloud-service
     - name: マネージド ID を使用して Key Vault を Azure Spring Cloud アプリに接続する
       href: spring-cloud-tutorial-managed-identities-key-vault.md
+    - name: マイクロサービス アプリケーションの自動スケーリングを設定する
+      href: spring-cloud-tutorial-setup-autoscale.md
 - name: サンプル
   items:
     - name: Azure Policy の組み込み
