--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: laurenhughes
   ms.author: lahugh
   ms.date: 07/21/2020
-  ms.openlocfilehash: 0a1efee059f0606248c5514dd37d1568e73897f6
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: 35138e4e5569ddfa46cb60c742e7ae0b3868c8cd
+  ms.sourcegitcommit: 97a0d868b9d36072ec5e872b3c77fa33b9ce7194
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87025202"
+  ms.lasthandoff: 08/04/2020
+  ms.locfileid: "87563332"
 landingContent:
 - title: Azure Kubernetes Service (AKS) について
   linkLists:
@@ -55,7 +55,7 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: Visual Studio Code を使用して Local Process with Kubernetes を利用する (プレビュー)
-      url: ../dev-spaces/how-to/local-process-kubernetes-vs-code.md
+      url: https://code.visualstudio.com/docs/containers/local-process-kubernetes
     - text: Visual Studio で Local Process with Kubernetes を使用する (プレビュー)
       url: /visualstudio/containers/local-process-kubernetes
 - title: アプリケーションのデプロイ、管理、更新
