commit translated contents

--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -171,10 +171,14 @@
         - name: Azure 仮想マシンの監視
           href: insights/monitor-vm-azure.md
           displayname: VM
+    - name: 配置
+      items:
+        - name: Azure Monitor をデプロイする
+          href: deploy.md
+        - name: 大規模にデプロイする
+          href: deploy-scale.md
     - name: 管理と構成
       items:
-        - name: 大規模にデプロイする
-          href: platform/deploy-scale.md
         - name: ロールのアクセス許可とセキュリティ
           href: platform/roles-permissions-security.md
         - name: IP アドレス
