commit translated contents

--- a/articles/firewall/toc.yml
+++ b/articles/firewall/toc.yml
@@ -58,6 +58,10 @@
       href: remote-work-support.md
     - name: ネットワーク規則内の FQDN
       href: fqdn-filtering-network-rules.md
+    - name: 概念
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
 - name: 操作方法ガイド
   items:
     - name: Azure PowerShell を使用したデプロイ
