--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 10/01/2019
-  ms.openlocfilehash: c2f0e0ce24b6835a3c4da7dd73581b76836334bc
-  ms.sourcegitcommit: dccb85aed33d9251048024faf7ef23c94d695145
+  ms.openlocfilehash: 58cb24b55be516fed5b72178ab83f38cc3d1caac
+  ms.sourcegitcommit: 5a37753456bc2e152c3cb765b90dc7815c27a0a8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "87281125"
+  ms.lasthandoff: 08/04/2020
+  ms.locfileid: "87760653"
 landingContent:
 - title: Computer Vision について
   linkLists:
@@ -124,7 +124,7 @@ landingContent:
   linkLists:
   - linkListType: reference
     links:
-    - text: Computer Vision API v3.1 preview.1
+    - text: Computer Vision API v3.1 プレビュー
       url: https://westus.dev.cognitive.microsoft.com/docs/services/computer-vision-v3-1-preview-1/operations/5d986960601faab4bf452005
     - text: Computer Vision API v3.0
       url: https://aka.ms/computer-vision-v3-ref
