--- a/articles/service-bus-messaging/TOC.yml
+++ b/articles/service-bus-messaging/TOC.yml
@@ -7,6 +7,8 @@
     - name: メッセージング サービスの比較
       href: ../event-grid/compare-messaging-services.md
       maintainContext: true
+    - name: Service Bus と Java Message Service (JMS) 2.0 を使用する (プレビュー)
+      href: how-to-use-java-message-service-20.md
 - name: クイックスタート
   items:
     - name: Service Bus キュー
@@ -127,6 +129,8 @@
           items:
             - name: キュー、トピック、サブスクリプション
               href: service-bus-queues-topics-subscriptions.md
+            - name: Java Message Service (JMS) 2.0 のエンティティ (プレビュー)
+              href: java-message-service-20-entities.md
             - name: メッセージ、ペイロード、およびシリアル化
               href: service-bus-messages-payloads.md
             - name: メッセージの転送、ロック、および解決
