commit translated contents

--- a/articles/event-hubs/index.yml
+++ b/articles/event-hubs/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: spelluru
   ms.author: spelluru
   ms.date: 06/23/2020
-  ms.openlocfilehash: 8b559591255a9856f644de5482ccec6b7d34a7f8
-  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
+  ms.openlocfilehash: 15f484665a74b7960908d2b430210fe921c33d5d
+  ms.sourcegitcommit: 2ff0d073607bc746ffc638a84bb026d1705e543e
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/24/2020
-  ms.locfileid: "85314917"
+  ms.lasthandoff: 08/06/2020
+  ms.locfileid: "87836787"
 landingContent:
 - title: Event Hubs について
   linkLists:
@@ -142,7 +142,7 @@ landingContent:
     - text: Stream Analytics を使用して Apache Kafka 用 Event Hubs イベントを処理する
       url: event-hubs-kafka-stream-analytics.md
     - text: Event Hubs を使用してデータを Azure Databricks にストリーム配信する
-      url: ../azure-databricks/databricks-stream-from-eventhubs.md
+      url: /azure/databricks/scenarios/databricks-stream-from-eventhubs
 - title: 監視と管理
   linkLists:
   - linkListType: how-to-guide
