--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -34,8 +34,6 @@
           href: connect-python.md
         - name: Node.js
           href: connect-nodejs.md
-        - name: Azure PowerShell
-          href: connect-powershell.md
         - name: Ruby
           href: connect-ruby.md
         - name: C++
@@ -193,7 +191,11 @@
         - name: ユーザーの作成
           href: howto-create-users.md
         - name: Connection strings
-          href: howto-connection-string.md
+          items:
+            - name: アプリケーションの接続
+              href: howto-connection-string.md
+            - name: Azure PowerShell
+              href: howto-connection-string-powershell.md
         - name: SSL の構成
           href: howto-configure-ssl.md
         - name: TLS の構成
