--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -209,14 +209,14 @@
       items:
         - name: データ ファクトリの視覚的な作成
           href: author-visually.md
+        - name: 反復開発とデバッグ
+          href: iterative-development-debugging.md
         - name: 管理ハブ
           href: author-management-hub.md
         - name: ソース管理
           href: source-control.md
         - name: 継続的インテグレーションと配信
           href: continuous-integration-deployment.md
-        - name: 反復開発とデバッグ
-          href: iterative-development-debugging.md
     - name: Connectors
       items:
         - name: コネクタの概要
@@ -562,6 +562,8 @@
       items:
         - name: リンクされたサービスをパラメーター化する
           href: parameterize-linked-services.md
+        - name: グローバル パラメーター
+          href: author-global-parameters.md
         - name: 式言語
           href: control-flow-expression-language-functions.md
         - name: システム変数
