--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -471,7 +471,7 @@
                   href: ../common/storage-use-azcopy-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Azure Data Factory
               href: ../../data-factory/connector-azure-blob-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: NFS を使用して Linux からストレージをマウントする
+            - name: NFS を使用してストレージをマウントする
               href: network-file-system-protocol-support-how-to.md
             - name: blobfuse を使用して Linux からストレージをマウントする
               href: storage-how-to-mount-container-linux.md
@@ -560,6 +560,8 @@
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
             - name: ストレージ エクスプローラーのトラブルシューティング
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Storage Explorer のセキュリティ
+              href: ../common/storage-explorer-security.md
             - name: Storage Explorer のサポート ポリシーとライフサイクル
               href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: ストレージ エクスプローラーのアクセシビリティ
@@ -654,7 +656,7 @@
           href: data-lake-storage-best-practices.md
         - name: クエリの高速化
           href: data-lake-storage-query-acceleration.md
-        - name: アーキテクチャ
+        - name: Architecture
           items:
             - name: Hadoop 用 Azure BLOB ファイル システム ドライバー
               href: data-lake-storage-abfs-driver.md
@@ -744,7 +746,7 @@
                 - name: 構成、最適化、トラブルシューティング
                   href: ../common/storage-use-azcopy-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Azure Data Factory
-              href: ../../data-factory/connector-azure-blob-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: ../../data-factory/connector-azure-data-lake-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: DistCp ツールを使用してデータを転送する
               href: data-lake-storage-use-distcp.md
             - name: データ移動ライブラリを使用してデータを転送する
@@ -834,6 +836,10 @@
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
             - name: ストレージ エクスプローラーのトラブルシューティング
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Storage Explorer のセキュリティ
+              href: ../common/storage-explorer-security.md
+            - name: Storage Explorer のサポート ポリシーとライフサイクル
+              href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: ストレージ エクスプローラーのアクセシビリティ
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Microsoft Q&A 質問ページ
